tcw3/designer/tests/bad/comp_path_super.tcwdl
pub comp super::Foo {}
//~^ ERROR `super` is not allowed to use
